[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/quick_material_setup/QuickMaterialSetup_Dock.gd" type="Script" id=1]
[ext_resource path="res://addons/quick_material_setup/CustomIcon.gd" type="Script" id=3]
[ext_resource path="res://addons/quick_material_setup/FileLoader.gd" type="Script" id=4]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="Material Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -752.0
margin_bottom = -88.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog Mat" type="FileDialog" parent="."]
margin_right = 562.0
margin_bottom = 412.0
popup_exclusive = true
window_title = "Datei(en) Ã¶ffnen"
resizable = true
mode = 1
filters = PoolStringArray( "*.png" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture Path Area" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
fileDialogPath = NodePath("../../FileDialog Mat")

[node name="Label" type="Label" parent="VBoxContainer/Texture Path Area"]
visible = false
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
text = "Material"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadPath" type="LineEdit" parent="VBoxContainer/Texture Path Area"]
margin_right = 240.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Select textures ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="VBoxContainer/Texture Path Area"]
margin_left = 244.0
margin_right = 272.0
margin_bottom = 24.0
icon = SubResource( 2 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Folder"

[node name="Options Label" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 272.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 5
text = "Options"
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 272.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Panel" parent="VBoxContainer/ScrollContainer"]
margin_right = 272.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MaterialProperties" type="MarginContainer" parent="VBoxContainer/ScrollContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties"]
margin_left = 4.0
margin_top = 4.0
margin_right = 268.0
margin_bottom = 432.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoAssing Area" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2"]
margin_right = 264.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/AutoAssing Area"]
margin_right = 184.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
hint_tooltip = "Do not try to match texture channels, just create one material per albedo texture"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Auto-assign channels"
valign = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/AutoAssing Area"]
margin_left = 188.0
margin_right = 264.0
margin_bottom = 40.0
hint_tooltip = "Do not try to match texture channels, just create one material per albedo texture"
pressed = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseTemplate Area" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2"]
margin_top = 44.0
margin_right = 264.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/UseTemplate Area"]
margin_right = 184.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
hint_tooltip = "Do not try to match texture channels, just create one material per albedo texture"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Use template material"
valign = 1

[node name="UseTemplate_Button" type="CheckButton" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/UseTemplate Area"]
margin_left = 188.0
margin_right = 264.0
margin_bottom = 40.0
hint_tooltip = "Do not try to match texture channels, just create one material per albedo texture"
pressed = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemplatePath Area" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2"]
margin_top = 88.0
margin_right = 264.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Material Path Area2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area"]
margin_right = 264.0
margin_bottom = 24.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
fileDialogPath = NodePath("../../../../../../../FileDialog Mat")

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Template"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadPath" type="LineEdit" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2"]
margin_left = 64.0
margin_right = 232.0
margin_bottom = 24.0
hint_tooltip = "This material will serve as a template for all new materials"
size_flags_horizontal = 3
placeholder_text = "Select a material ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2"]
margin_left = 236.0
margin_right = 264.0
margin_bottom = 24.0
icon = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Folder"

[node name="Modify" type="Button" parent="VBoxContainer"]
margin_left = 78.0
margin_top = 492.0
margin_right = 194.0
margin_bottom = 512.0
size_flags_horizontal = 4
text = "Create Materials"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="files_selected" from="FileDialog Mat" to="VBoxContainer/Texture Path Area" method="_on_FileDialog_Mat_files_selected"]
[connection signal="text_changed" from="VBoxContainer/Texture Path Area/LoadPath" to="VBoxContainer/Texture Path Area" method="_on_LoadPath_text_changed"]
[connection signal="pressed" from="VBoxContainer/Texture Path Area/OpenButton" to="VBoxContainer/Texture Path Area" method="_on_OpenButton_pressed"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/UseTemplate Area/UseTemplate_Button" to="." method="_on_UseTemplate_Button_toggled"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2/LoadPath" to="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2" method="_on_LoadPath_text_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2/OpenButton" to="VBoxContainer/ScrollContainer/Options/MaterialProperties/VBoxContainer2/TemplatePath Area/Material Path Area2" method="_on_OpenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modify" to="." method="_on_Modify_pressed"]
